--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,10 @@ header{
   text-decoration: underline;
   color: seashell;
   }
-
+nav a{
+  display: inline-block;
+  padding: 30px 15px;
+}
 /*Mission*/
 
 #mission {
@@ -60,7 +63,9 @@ header{
     background-color: black;
     width: 100%;
   }
-  /*Tea of the month*/
+
+/*Tea of the month*/
+
 #Shop{
     height: 700px;
     width: 1000px;
@@ -102,10 +107,11 @@ header{
 
 /*Copyright*/
 
- h5{
+  h5{
       display: block;
+      font-weight: lighter;
     }
- footer{
+    footer{
     text-align: left;
     padding-left: 20px;
   }
